k8s/apps/siyuan.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: siyuan-his
  namespace: default
  labels:
    app: siyuan-his
spec:
  replicas: 1
  selector:
    matchLabels:
      app: siyuan-his
  template:
    metadata:
      labels:
        app: siyuan-his
    spec:
      containers:
        - name: siyuan
          image: b3log/siyuan:latest
          imagePullPolicy: IfNotPresent
          args:
            - "serve"
            - "--workspace=/siyuan/workspace/"
            - "--accessAuthCode=$(SIYUAN_ACCESS_CODE)"
          ports:
            - containerPort: 6806
              name: http
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
            requests:
              memory: 128Mi
              cpu: 100m
          volumeMounts:
            - name: siyuan-storage
              mountPath: /siyuan/workspace
      volumes:
        - name: siyuan-storage
          persistentVolumeClaim:
            claimName: siyuan-his-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: siyuan-his-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: siyuan-his
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 6806
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: siyuan-his-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
    - host: hisnotes.maybeit.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: siyuan-his-service
                port:
                  number: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: siyuan-her
  namespace: default
  labels:
    app: siyuan-her
spec:
  replicas: 1
  selector:
    matchLabels:
      app: siyuan-her
  template:
    metadata:
      labels:
        app: siyuan-her
    spec:
      containers:
        - name: siyuan
          image: b3log/siyuan:latest
          imagePullPolicy: IfNotPresent
          args:
            - "serve"
            - "--workspace=/siyuan/workspace/"
            - "--accessAuthCode=$(SIYUAN_ACCESS_CODE)"
          ports:
            - containerPort: 6806
              name: http
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
            requests:
              memory: 128Mi
              cpu: 100m
          volumeMounts:
            - name: siyuan-storage
              mountPath: /siyuan/workspace
      volumes:
        - name: siyuan-storage
          persistentVolumeClaim:
            claimName: siyuan-her-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: siyuan-her-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: siyuan-her
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 6806
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: siyuan-her-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
    - host: hernotes.maybeit.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: siyuan-her-service
                port:
                  number: 80
