k8s/apps/tymeslot.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tymeslot
  namespace: default
  labels:
    app: tymeslot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tymeslot
  template:
    metadata:
      labels:
        app: tymeslot
    spec:
      containers:
        - name: tymeslot
          image: luka1thb/tymeslot:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
              name: http
          resources:
            limits:
              memory: 384Mi
              cpu: 500m
            requests:
              memory: 128Mi
              cpu: 100m
          volumeMounts:
            - name: tymeslot-storage
              mountPath: /app/data
              subPath: app-data
            - name: tymeslot-storage
              mountPath: /var/lib/postgresql/data
              subPath: pg-data
      volumes:
        - name: tymeslot-storage
          persistentVolumeClaim:
            claimName: tymeslot-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: tymeslot-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: tymeslot
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tymeslot-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
    - host: tymeslot.maybeit.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tymeslot-service
                port:
                  number: 80
